@@ -1,34 +1,58 @@
 package com.pet.api_pet.security;
 
+import java.io.IOException;
+import java.time.Duration;
 import java.util.Arrays;
+import java.util.List;
 
 import com.pet.api_pet.security.filter.JwtAuthenticationFilter;
 import com.pet.api_pet.security.filter.JwtValidationFilter;
+import com.pet.api_pet.service.impl.GoogleOAuth2UserService;
 import com.pet.api_pet.service.impl.JpaUserDetailsService;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 
+import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
+import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
+import org.springframework.security.oauth2.client.oidc.userinfo.OidcUserRequest;
+import org.springframework.security.oauth2.client.userinfo.OAuth2UserService;
+import org.springframework.security.oauth2.core.OAuth2AuthenticationException;
+import org.springframework.security.oauth2.core.oidc.user.DefaultOidcUser;
+import org.springframework.security.oauth2.core.oidc.user.OidcUser;
+import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.GenericFilterBean;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity( prePostEnabled = true)
 public class SpringSecurityConfig {
+
 
     @Autowired
     private AuthenticationConfiguration authenticationConfiguration;
@@ -42,7 +66,8 @@ public class SpringSecurityConfig {
     @Autowired
     private JpaUserDetailsService userDetailsService;
 
-
+    @Autowired
+    private GoogleOAuth2UserService googleOAuth2UserService;
 
     @Bean
     SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -58,7 +83,8 @@ public class SpringSecurityConfig {
                         .requestMatchers(HttpMethod.GET, "/api/users").permitAll()
                         .requestMatchers(HttpMethod.POST, "/api/auth/register").permitAll()
                         .requestMatchers(HttpMethod.POST,"/api/login").permitAll()
-
+                        //.requestMatchers(HttpMethod.GET, "/api/auth/google/login").permitAll()
+                        .requestMatchers("/","/login/**","/oauth2/**").permitAll()
 
                         .anyRequest().authenticated())
                 .addFilter(jwtAuthorizationFilter())
@@ -66,22 +92,29 @@ public class SpringSecurityConfig {
                 .addFilter(new JwtValidationFilter(authenticationManager()))
                 .userDetailsService(userDetailsService)
                 .httpBasic(Customizer.withDefaults())
-                .csrf(config -> config.disable())
-                .sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .csrf(AbstractHttpConfigurer::disable)
+                .sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
+                .oauth2Login(oauth2Login -> oauth2Login
+                        .loginPage("/login")
+                        .defaultSuccessUrl("/api/auth/login/oauth2/success", true)
+                        .failureUrl("/login/failure")
+                        .userInfoEndpoint(userInfo -> userInfo
+                                .oidcUserService(googleOAuth2UserService)))
                 .build();
     }
+
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowCredentials(true);
+        configuration.setAllowCredentials(Boolean.TRUE);
         configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200","https://frontend-docspot-rnzn.vercel.app"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setMaxAge(3600L); // 1 hour
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setMaxAge(Duration.ofDays(3600L)); // 1 hour
 
         // Add CSRF protection
-        configuration.setExposedHeaders(Arrays.asList("X-CSRF-TOKEN"));
+        configuration.setExposedHeaders(List.of("X-CSRF-TOKEN"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -98,4 +131,7 @@ public class SpringSecurityConfig {
         jwtAuthenticationFilter.setFilterProcessesUrl("/api/login");
         return jwtAuthenticationFilter;
     }
+
+
+
 }
